# llvm-project

libc/src/__support/: float_to_string.h  str_to_float.h
libc/src/__support/CPP/: limits.h
libc/src/__support/FPUtil/: CMakeLists.txt  FloatRepresentation.h  NormalFloat.h  dyadic_float.h  fpbits_str.h
libc/src/__support/FPUtil/generic/: sqrt.h  sqrt_80_bit_long_double.h
libc/src/__support/FPUtil/x86_64/: LongDoubleBits.h  NextAfterLongDouble.h
libc/src/stdio/printf_core/: float_dec_converter.h  float_hex_converter.h
libc/test/src/__support/FPUtil/: CMakeLists.txt  float_representation_test.cpp
libc/test/src/math/: LdExpTest.h  RoundToIntegerTest.h
libc/test/src/math/smoke/: NextTowardTest.h
libc/utils/MPFRWrapper/: MPFRUtils.cpp
utils/bazel/llvm-project-overlay/libc/: BUILD.bazel
utils/bazel/llvm-project-overlay/libc/test/src/__support/FPUtil/: BUILD.bazel
