# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Tests for LLVM libc FPUtil functions.

load("//libc/test:libc_test_rules.bzl", "libc_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

libc_test(
    name = "float_representation_test",
    srcs = ["float_representation_test.cpp"],
    deps = [
        "//libc:__support_cpp_bit",
        "//libc:__support_cpp_type_traits",
        "//libc:__support_fputil_float_representation",
    ],
)
